# recallify

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  cli.py  config.py  main.py  scheduler.py
src/collectors/: __init__.py  github.py  slack.py
src/database/: connection.py  models.py
src/llm/: __init__.py  bedrock.py  summarizer.py
src/tasks/: __init__.py  fetch_github.py  fetch_slack.py  summarize_github.py  summarize_slack.py
